Fixes some tests; Fixes tx direction pill text v align;

--- a/src/assets/styles/_elements.scss
+++ b/src/assets/styles/_elements.scss
@@ -143,10 +143,8 @@
   @extend .flex-fill;
 
   font-weight: normal;
-  font-size: 65%;
-  // height: 1.1rem;
+  font-size: 63%;
   position: relative;
-  // top: 0.2rem;
   background-color: $light;
   min-width: 2.5rem;
 
